Fix #240 - study list view in collect tab - avoid flicker effect from hovering on link
Ignore-this: 1a18e205d87c08ca127d99e9e9d64b95

darcs-hash:20100319203836-d3087-5832b24b6a90604ff7212cbb11e6ed25cb4b6331.gz

--- a/pub/stylesheets/survey.css
+++ b/pub/stylesheets/survey.css
@@ -504,7 +504,7 @@ div.study-list-item {
 }
 
 .study-list-study-name {
-    color: brown;
+    color: orange;
     font-weight: bold;
     font-size: 120%;
 }
@@ -513,6 +513,8 @@ div.study-list-item {
     color: black;
     font-weight: normal;
     font-size: 100;
+    margin-left: 1.5em;
+    margin-right: 1.52em;
 }
 
 .study-list-survey-name {
@@ -531,6 +533,7 @@ div.study-list-item {
 }
 
 .study-list-survey-name A {
+    position: relative;
 }
 
 A .study-list-survey-description-alink {
@@ -539,13 +542,15 @@ A .study-list-survey-description-alink {
 
 A:hover .study-list-survey-description-alink {
     display: block;
-    position: relative;
-    left: 1em;
+    position: absolute;
+    top: 45px;
+    left: 30px;
     padding: 8px;
-    background: #fdd
+    text-indent: 0;
+    background-color: white;
     border: 1px solid orange;
     font-weight: normal;
-    color: green;
+    color: black;
 }
 
 .study-list-survey-name A:hover {
